# flask-notes

./: .gitignore  README.md  app.py  pyproject.toml
instance/: db.py  notes.db
models/: notes.py
routes/: __init__.py  notes.py
static/css/: index.css
static/js/: index.js  notes.js
templates/: index.djhtml  notes.djhtml
